kubernetes/backend-deployment.yaml
# kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: aouichou.azurecr.io/backend:latest
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /app/media
            name: media-volume
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 45
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "500m"

      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
