kubernetes/nginx-deployment.yaml
# kubernetes/nginx-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: media-volume
          mountPath: /app/media
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
