kubernetes/ingress.yaml
# kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"  # Explicitly set if needed
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aouichou.me
    - www.aouichou.me
    secretName: portfolio-tls
  rules:
  - host: aouichou.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
